<resources>
	<string name="access_not_granted_format" comment="Formatted access not granted body">Hi %1$s (%2$s), you are not authorised to use this app. Please contact your HR office for more information.</string>
	<string name="access_not_granted_msg" comment="Access not granted body. Used instead of access_not_granted_format when fullname and email are not available">Hi, you have a valid Open Data Hub- or NOI-Account and you are logged in, but you miss the permissions to access the Community App. Please write to community@noi.bz.it to learn more.</string>
	<string name="alumix_name" comment="Alumix displayed name">Alumix</string>
	<string name="alumix_openings" comment="Alumix openings days and hours">Monday - Friday: 5:00 - 15:00\n\nSaturday and Sunday: closed</string>
	<string name="app_name" comment="The app name displayed near the app icon">Community</string>
	<string name="btn_add_to_calendar" comment="Event Details: Add to Calendar button label">Add to calendar</string>
	<string name="btn_ask_a_question" comment="News detail: text of the button to send an email to news publisher">Any questions?</string>
	<string name="btn_call" comment="Contact details page: call button text">Call</string>
	<string name="btn_delete_account" comment="Delete Account button">Delete account</string>
	<string name="btn_external_link" comment="News detail: text of the button to open external link">More info</string>
	<string name="btn_find" comment="Contact details page: find button text">Find</string>
	<string name="btn_find_on_maps" comment="Event Details: Find on Maps button label">Find on maps</string>
	<string name="btn_login" comment="Onboarding wizard: login button label">Login</string>
	<string name="btn_logout" comment="Logout button">Log out</string>
	<string name="btn_mail" comment="Contact details page: mail button text">Email</string>
	<string name="btn_menu" comment="Tab Eat: Menu button">Menu</string>
	<string name="btn_sign_up" comment="Event Details: Signup button label">Sign up</string>
	<string name="btn_signup" comment="Onboarding wizard: sign up button label">Sign up</string>
	<string name="cancel_label" comment="Cancel Label">Cancel</string>
	<string name="community_bar_a1_name" comment="NOI-Community Bar A1 displayed name">Community Bar A1</string>
	<string name="community_bar_a1_openings" comment="NOI-Community Bar A1 openings days and hours">Access via badge\nVegan meals available Monday to Friday (€ 8,00)\nCoffee always available (€ 0.60)</string>
	<string name="community_bar_d2_name" comment="NOI-Community Bar D2 displayed name">Community Bar D2</string>
	<string name="community_bar_d2_openings" comment="NOI-Community Bar D2 openings days and hours">Access via badge\nSale of meals and snacks: Mon–Fri 11:30–14:30\nCoffee always available from the vending machine</string>
	<string name="delete_profile_compose_body" comment="">Dear NOI-Community Team,\n\nI would like to request the cancellation of my profile from the NOI-Community database. The reason is that\n(please select)\n\n- I am no longer employed by an institute/company at NOI Techpark;\n- I am not interested in being in contact with the NOI-Community and in receiving news in this regard;\n- others.\n\nThank you!</string>
	<string name="delete_profile_compose_subject" comment="">Request to delete profile</string>
	<string name="error_title" comment="Title of generic error dialog">Error</string>
	<string name="events_top_tab" comment="Tab Today: title of top tab Events">Events</string>
	<string name="filter_by_sector" comment="Filters page: title section - Filter by technology sector">Filter by technology sector</string>
	<string name="filter_by_type" comment="Filters page: title section - Filter by event type">Filter by event type</string>
	<string name="important_tag" comment="Tab News: text of the label to show on news flagged as important">Important</string>
	<string name="label_about" comment="Event Details: About label">About</string>
	<string name="label_access_not_granted" comment="Access not granted title label">Authorisation required</string>
	<string name="label_address" comment="Contact details page:company address label">Address</string>
	<string name="label_contacts_empty_state_subtitle" comment="Tab Meet: empty state subtitle">Based on your filter settings, we could not find any member of the Community that matches. Try to readjust your filters.</string>
	<string name="label_email" comment="Email label">Email</string>
	<string name="label_empty_state_title" comment="Empty state title">We are very sorry!</string>
	<string name="label_events_empty_state_subtitle" comment="Tab Today: Empty state subtitle">But based on your filter settings, we could not find any events. Try to readjust your filters.</string>
	<string name="label_filters_empty_state_subtitle" comment="Company filters page: empty state subtitle">Based on your filter settings, we\ncould not find any results.\nTry to readjust your filters.</string>
	<string name="label_interesting_for_you" comment="Event Details: Interesting for you label">Interesting for you?</string>
	<string name="label_name" comment="Full name label">Name</string>
	<string name="label_no_value" comment="Used in the UI of the single field of one event when the associated field has no value. E.G. if the title is missing, we should place &quot;N/D&quot;">N/D</string>
	<string name="label_phone" comment="Contact details page: telephone number label">Phone</string>
	<string name="login_browser_error_msg" comment="Message to show when login fails due to browser compatibility issues">You must have installed a compatible browser (Chrome, Firefox or Samsung Browser) to continue with authentication. If you have already installed it, restart the app and try again.</string>
	<string name="logout_error_msg" comment="Message to show when an error occurs during logout">Cannot log out.</string>
	<string name="maps_error_msg" comment="Message to show if you try to search a company address, but you haven\'t installed the relative app">Download Google Maps or Waze to find the address on the map.</string>
	<string name="meet_item_companies" comment="Tab Meet: Companies item">Companies</string>
	<string name="meet_item_institutions" comment="Tab Meet: Institutional Support item">Institutions</string>
	<string name="meet_item_lab" comment="Tab Meet: Laboratories item">Laboratories</string>
	<string name="meet_item_research" comment="Tab Meet: Research Institutions item">Research Institutions</string>
	<string name="meet_item_startups" comment="Tab Meet: Startups item">Start-ups</string>
	<string name="meet_item_team" comment="Tab Meet: Team NOI item">NOI-Team</string>
	<string name="meet_item_university" comment="Tab Meet: University item">University</string>
	<string name="more_item_account" comment="Tab More: Profile item">My Profile</string>
	<string name="more_item_feedback" comment="Tab More: Provide Feedback item">Your feedback</string>
	<string name="more_item_bug_report" comment="Tab More: Bug report item">Bug report</string>
	<string name="more_item_onboarding" comment="Tab More: Come on board item">Come on board</string>
	<string name="more_item_settings" comment="Tab More: App Settings item">App Settings</string>
	<string name="more_item_app_update" comment="Tab More: Application update item (for beta testers)">Application update</string>
	<string name="news_notification_channel_name" comment="Channel name for push notifications relative to news (visible in app settings)">News</string>
	<string name="news_top_tab" comment="Tab Today: title of top tab News">News</string>
	<string name="noi_techpark_address" comment="Noi Techpark\'s address">NOI Techpark Alto Adige\nVia Alessandro Volta 13/A\n39100, Bolzano\nItaly</string>
	<string name="noisteria_name" comment="Noisteria displayed name">Noisteria</string>
	<string name="noisteria_openings" comment="Noisteria openings days and hours">Monday - Thursday: 8:00 - 19:30\nFriday: 8:00 - 20:00\n\nSaturday and Sunday: closed</string>
	<string name="ok_button" comment="Ok label (i.e. button in generic error dialog)">Ok</string>
	<string name="onboarding_events_text" comment="Onboarding wizard: text to show in second step">Summer at NOI, Maker workshops, Coffee Hour - never miss out on one of our vibrant community events…</string>
	<string name="onboarding_events_title" comment="Onboarding wizard: title of the second step">Join us!</string>
	<string name="onboarding_meetup_text" comment="Onboarding wizard: text to show in third step">900 people, united in one place. Connect with others, whether it\'s for an R&amp;D project or just a casual exchange of ideas...</string>
	<string name="onboarding_meetup_title" comment="Onboarding wizard: title of the third step">Meet up!</string>
	<string name="onboarding_news_text" comment="Onboarding wizard: text to show in first step">Keep up to date with the latest news and cool initiatives from our innovation district...</string>
	<string name="onboarding_news_title" comment="Onboarding wizard: title of the first step">Stay informed!</string>
	<string name="reset_filters_btn" comment="Filters page: reset filters button">Reset all Filters</string>
	<string name="room_booking" comment="Tab More: Book a room item\nTab Orientate: button label">Book a room</string>
	<string name="search_label" comment="Search Label">Search</string>
	<string name="show_results_btn_format" comment="Filter page: show result button">Show results (%1$d)</string>
	<string name="show_results_btn" comment="Filter page: default show result button">Show results</string>
	<string name="tab_title_eat" comment="Tab Eat: title on bottom navigation">Eat</string>
	<string name="tab_title_meet" comment="Tab Meet: title on bottom navigation">Meet</string>
	<string name="tab_title_more" comment="Tab More: title on bottom navigation">More</string>
	<string name="tab_title_orientate" comment="Tab Orientate: title on bottom navigation">Orientate</string>
	<string name="tab_title_today" comment="Tab Today: title on bottom navigation">Today</string>
	<string name="time_filter_all" comment="Tab Today: All time filter">All</string>
	<string name="time_filter_this_month" comment="Tab Today: This month time filter">This month</string>
	<string name="title_eat" comment="Tab Eat: title on action bar">Take a break!</string>
	<string name="title_meet" comment="Tab Meet: title on action bar">Meet up!</string>
	<string name="title_more" comment="Tab More: title on action bar (not used)">More</string>
	<string name="title_orientate" comment="Tab Orientate: title on action bar">Find your way!</string>
	<string name="title_today" comment="Tab Today: title on action bar">Hey you!</string>
	<string name="come_on_board_onboarding_title" comment="Title of come on board onboarding">Your registration has been successful</string>
	<string name="come_on_board_onboarding_body" comment="Body of come on board onboarding">Welcome to the NOI-Community App!\n\nNew to NOI? Take a look at our Community Manual, where we have compiled useful information for you. You can find it in the \"More\" menu, under \"Come on Board\".</string>
	<string name="dont_show_again_toogle_title" comment="Label of don\'t show again toggle">Don\'t show again</string>
	<string name="understood_button_title" comment="Title of understood button">Understood</string>
	<string name="login_update_title" comment="Title of login update message">New Registration Required</string>
	<string name="login_update_body" comment="Body of login update message">We’ve simplified the login system to remove errors and complicated steps.\n\nThe old login no longer works. On the next screen, click “Sign Up” and create your new account. After this one-time registration, you’ll stay signed in and have quick access to news, events, and services.</string>
	<string name="login_update_btn" comment="Login update message: button text">Continue</string>
</resources>