<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_today"
        android:icon="@drawable/ic_today"
        android:title="@string/title_today" />

    <item
        android:id="@+id/navigation_orientate"
        android:icon="@drawable/ic_orientate"
        android:title="@string/title_orientate" />

    <item
        android:id="@+id/navigation_meet"
        android:icon="@drawable/ic_meet"
        android:title="@string/title_meet" />

    <item
        android:id="@+id/navigation_eat"
        android:icon="@drawable/ic_eat"
        android:title="@string/title_eat" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />

</menu>