<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="@dimen/default_margin">

	<TextView
		android:id="@+id/title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/label_access_not_granted"
		android:textAlignment="center"
		android:textColor="@color/secondary_color"
		style="@style/TextAppearance.NOI.Subtitle"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<TextView
		android:id="@+id/message"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:text="@string/access_not_granted_msg"
		android:textAlignment="center"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@id/title"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/logout"
		style="@style/ThemeOverlay.NOI.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:text="@string/btn_logout"
		app:icon="@drawable/ic_exit_arrow"
		app:layout_constraintTop_toBottomOf="@id/message"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
