<?xml version="1.0" encoding="utf-8"?>

<!--
SPDX-FileCopyrightText: NOI Techpark <digital@noi.bz.it>

SPDX-License-Identifier: CC0-1.0
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?attr/background"
	android:theme="@style/Theme.NOICommunity.Secondary">

	<LinearLayout
		android:id="@+id/header"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="?attr/colorSecondary"
		android:orientation="vertical"
		android:padding="@dimen/default_margin"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:id="@+id/title"
			style="?attr/textAppearanceSubtitle1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/come_on_board_onboarding_title"
			android:textAlignment="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/message"
			style="?attr/textAppearanceBody1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/come_on_board_onboarding_body"
			android:textAlignment="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/title" />
	</LinearLayout>

	<include
		android:id="@+id/app_version"
		layout="@layout/vh_app_version"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/header" />

	<LinearLayout
		android:id="@+id/footer"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="?attr/background"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:padding="@dimen/default_margin"
		android:theme="@style/Theme.NOICommunity.Primary"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<CheckBox
				android:id="@+id/checkbox"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<TextView
				android:id="@+id/checkbox_text"
				style="?attr/textAppearanceBody1"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/dont_show_again_toogle_title" />
		</LinearLayout>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/understood"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/default_margin"
			android:text="@string/understood_button_title" />
	</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
