<?xml version="1.0" encoding="utf-8"?>

<!--
SPDX-FileCopyrightText: NOI Techpark <digital@noi.bz.it>

SPDX-License-Identifier: CC0-1.0
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?attr/background"
	android:theme="@style/Theme.NOICommunity.Secondary">

	<LinearLayout
		android:id="@+id/header"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="?attr/colorSecondary"
		android:orientation="vertical"
		android:padding="@dimen/default_margin"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:id="@+id/title"
			style="?attr/textAppearanceSubtitle1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/login_update_title"
			android:textAlignment="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/message"
			style="?attr/textAppearanceBody1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/login_update_body"
			android:textAlignment="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/title" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/footer"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="?attr/background"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent">

		<com.google.android.material.button.MaterialButton
			android:id="@+id/registerNowBtn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/default_margin"
			android:text="@string/login_update_btn" />

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
